<resources>
    <string name="app_name">CreditPay</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mobile__bill__payment">Mobile_Bill_Payment</string>
    <string name="title_activity_mobile_recharge">MobileRecharge</string>
    <string name="title_activity_dth__recharge">DTH_Recharge</string>
    <string name="title_activity_payment_main">PaymentMainActivity</string>
    <string name="title_activity_landline__bill__payment">Landline_Bill_Payment</string>
    <string name="title_activity_electicity__bill__payment">Electicity_Bill_Payment</string>
    <string name="title_activity_gas__bill__payment">Gas_Bill_Payment</string>
    <string name="title_activity_recharge_viasms">RechargeVIAsms</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="title_activity_index_screen">Index_screen</string>
    <string name="title_activity_mainlist">activity_mainlist</string>
    <string name="dth_recharge">DTH Recharge</string>
    <string name="btn_name_process">Proceed</string>
    <string name="electicity_bill">Electicity Bill Payment</string>
    <string name="message_on_forget_activity">To reset Your Password,enter the Email</string>
    <string name="message_on_forget_activity2">Registered with bribhoo Recharge</string>
    <string name="btn_submit">Submit</string>
    <string name="gas_bill_payment">Gas Bill Payment</string>
    <string name="prepaid">Prepaid</string>
    <string name="dth">DTH</string>
    <string name="landline">Landline</string>
    <string name="gas">Gas</string>
    <string name="ppostpaid">Postpaid</string>
    <string name="datacard">Data Card</string>
    <string name="electicity_lable">Electicity</string>
    <string name="Insurance">Insurance</string>
    <string name="wallet">Wallet</string>
    <string name="viasms">VIA SMS</string>
    <string name="footer_lable">2015 BriBhoo online Service Pvt. Ltd</string>
    <string name="data_card_bill_payment">Data Card Bill Payment</string>
    <string name="landline_bill_payment">Landline Bill Payment</string>
    <string name="forget_password">Forget Password</string>
    <string name="logine_messages">This is your account primary Number By</string>
    <string name="login_message1">Signing In your agree to our terms and Conditions</string>
    <string name="signup_radio_txt">Signup</string>
    <string name="login_radio_txt">Login</string>
    <string name="mobile_bill_payment">Mobile Bill Payment</string>
    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="recharge_viasms">Recharge VIA SMS</string>
    <string name="sms_to">SMS to 9211-060-000</string>
    <string name="rechange_prepaid_mobile">Recharge a Prepaid Mobile</string>
    <string name="recharge_data_card">Recharge Data Card</string>
    <string name="pay_telivision_dth_bill">Pay Television (DTH) Bill</string>
    <string name="your_mowik_wallete_balance">You BriBhoo Wallet Balance</string>
    <string name="message_via_sms_activity1">Ensure you have sufficient funds in your Wallet</string>
    <string name="message_via_sms_activity2">Standard SMS rates apply</string>
    <string name="footer_txt"></string>
    <string name="add_cash">Add Cash</string>
    <string name="uploadfile">Upload</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="change_password">Change Password</string>
    <string name="select_your_service">Select Your Service</string>
    <string name="rept_recharge">Repeat A Recharge</string>
    <string name="add_no">Add Mobile No.</string>
    <string name="choosefile">Choose File</string>
    <string name="add_cash_color_bg"></string>
    <string name="title_activity_transection_history">Recharge History</string>
    <string name="wallettrans">Wallet History</string>
    <string name="orderno">Order no :</string>
    <string name="vodafone">vodafone :</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_save_connection">SaveConnection</string>
    <string name="mobile_no">Mobile No. *</string>
    <string name="service_provider">Service Provider</string>
    <string name="NickName">Nickname</string>
    <string name="add">Add</string>
    <string name="cancle">Cancel</string>
    <string name="recharge">Recharge</string>
    <string name="title_activity_become_seller">BecomeSeller</string>
    <string name="become_saller">Become A Saller</string>
    <string name="Your_name">Your Name *</string>
    <string name="mobile_number">Mobile Number *</string>
    <string name="Your_Email_ID">Your Email ID *</string>
    <string name="city">City *</string>
    <string name="business_name">Business Name *</string>
    <string name="chosse_your_cat">Choose Your Category *</string>
    <string name="business_address">Business Address *</string>
    <string name="title_activity_care_for_few_deals">Care_for_few_deals</string>
    <string name="care_for_few_deals">Care for few Deals</string>
    <string name="free">Free</string>
    <string name="pick">Pick</string>
    <string name="title_activity_great_let_get_payment">Great_let_get_payment</string>
    <string name="great_let_get_payment">great,let\'s get the payment done</string>
    <string name="select_an_option_to_pay">Select an Option to Pay</string>
    <string name="title_activity_success">Success</string>
    <string name="payment_recv_by">Payment of Rs 10 is Received by Reliance CDMA Recharge !</string>
    <string name="recharge_of_mobile">Recharge of Your Reliance CDMA MobileNumber 9898888888 for Rs.10</string>
    <string name="order_no">Bribhoo order no:</string>
    <string name="title_activity_transfer_mony">TransferMony</string>
    <string name="wallete_balance">Wallete Balance:</string>
    <string name="transfer_mony">Transfer Money To...</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="transfer_money">Add Money</string>
    <string name="login">LOGIN</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="register">Register</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="title_activity_main_drawer">MainDrawer</string>
    <string name="title_activity_insurence">Insurence</string>
    <string name="insurence_name">Insurance Bill Payment</string>
    <string name="title_activity_popular__recharge__plan">Popular_Recharge_Plan</string>
    <string name="popular_recharge">Popular Idea Recharge Plans Mumbai</string>
    <string name="title_activity_active_expared">ActiveExpared</string>
    <string name="title_activity_notification">Notification</string>
    <string name="notification">Notification</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_active_tab">Active_tab</string>
    <string name="title_activity_expared_tab">Expared_tab</string>
    <string name="title_activity_recommended">Recommended</string>
    <string name="title_activity_fulltalktime">Fulltalktime</string>
    <string name="title_activity_wallet_transaction_history">WalletTransactionHistory</string>
    <string name="title_activity_profile_setting">ProfileSetting</string>
    <string name="address_">Address</string>
    <string name="area_">Area</string>
    <string name="state_">State</string>
    <string name="cirt_">City</string>
    <string name="pincode_">Pincode</string>
    <string name="care_for_deals">care for few deals</string>
    <string name="processd_to_pay">Processed To Pay</string>
    <string name="apply">Apply</string>
    <string name="rsbal">Rs</string>
    <string name="rechargeof">Recharge of</string>
    <string name="Mobileno">Mobile</string>
    <string name="save">Save</string>
    <string name="wallate_history">Wallet History</string>
    <string name="payment">Great let\'s get Payment done</string>
    <string name="selectoptiontopay">Select option to pay</string>
    <string name="selectfrompopular">Select from popular bank</string>
    <string name="otherbank">Or select other bank</string>
    <string name="processedtoseculy">Proceed securely</string>
    <string name="current_wallet_bal">Current Wallet Balance: </string>
    <string name="you_recharge_amount">Your Recharge Amount: </string>
    <string name="addcashwallet">Add Cash in Wallet</string>
    <string name="welcomebribhoo">Welcome to BriBhoo Recharge</string>
    <string name="enterdebitcard">Enter debit card details</string>
    <string name="cardno">Card Number</string>
    <string name="expirydate">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="save_this_card_for_faster_checkout">Save this card for Faster checkout</string>
    <string name="entercreditcard">Enter credit card details</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="selectAction">
        <item>Resend OTP</item>
        <item>Enter OTP Manually</item>
    </string-array>
    <string name="title_activity_initial_screen">CCAvenueMobileSeamless</string>
    <string name="title_activity_billing_shipping">BillingShippingActivity</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="access_code">Access Code</string>

    <string name="pay_opt">Payment Option</string>
    <string name="card_type">Card Type</string>
    <string name="pay_button">Pay</string>
    <string name="next_button">Next</string>

    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="billingAddress">Billing Address</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="state">State</string>

    <string name="zip">Zip</string>
    <string name="tel">Telephone</string>
    <string name="email">Email Id</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>

    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="card_number">Card Number</string>
    <string name="card_cvv">Card CVV</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="card_details">Card Details</string>
    <string name="issuing_bank">Issuing Bank</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="customer_identifier">Customer Identifier</string>
    <string name="emi_banks">EMI Banks</string>
    <string name="emi_card_name">Card Name</string>
</resources>
